# connect

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-24-connect-cli.md  2026-03-25-connect-keychain-signing.md  2026-03-25-connect-v0.3.md  2026-03-27-connect-parallel-copy.md
docs/superpowers/specs/: 2026-03-24-connect-design.md  2026-03-25-connect-keychain-signing-design.md  2026-03-25-connect-v0.3-design.md  2026-03-27-connect-parallel-copy-design.md
packaging/: install.sh
packaging/macos/: postinstall
packaging/windows/: connect.wxs
src/: app.rs  error.rs  lib.rs  main.rs
src/archive/: codec.rs  crypto.rs  mod.rs  schema.rs
src/cli/: mod.rs  runtime.rs  types.rs
src/cli/commands/: add.rs  backup.rs  completion.rs  connect.rs  copy.rs  doctor.rs  edit.rs  exec.rs  forward.rs  hostkeys.rs  list.rs  open.rs  profile.rs  remove.rs  show.rs  version.rs
src/doctor/: checks.rs  mod.rs  output.rs
src/forward/: mod.rs  runtime.rs  spec.rs
src/secrets/: keyring.rs  mod.rs
src/ssh/: auth.rs  checkpoint.rs  client.rs  copy.rs  hostkeys.rs  mod.rs  parallel.rs  progress.rs
src/store/: db.rs  forward_store.rs  hostkey_store.rs  mod.rs  models.rs  profile_store.rs
src/terminal/: interactive.rs  mod.rs  prompt.rs
tests/: archive_crypto.rs  archive_roundtrip.rs  backup_commands.rs  cli_help.rs  configuration_dirs.rs  copy_path_parsing.rs  doctor_commands.rs  forward_commands.rs  hostkey_commands.rs  openssh_e2e_linux.rs  packaging_assets.rs  parallel_copy_checkpoint.rs  parallel_copy_planning.rs  profile_commands.rs
