[package]
name = "connect"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
directories = "6.0"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
rpassword = "7.4"
russh = "0.58.0"
russh-sftp = "2.1.1"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
