[package]
name = "connect"
version = "0.2.2"
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
directories = "6.0"
filetime = "0.2"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
rpassword = "7.4"
russh = "0.58.0"
russh-sftp = "2.1.1"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "net", "process", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
